--- a/war/pom.xml
+++ b/war/pom.xml
@@ -45,7 +45,7 @@
          </plugin>
       </plugins>
       <!-- Name of the generated WAR file -->
-      <finalName>doubleit</finalName>
+      <finalName>edicrop</finalName>
    </build>
 
    <profiles>
